
Changes and New Features in 1.0 (2021-12-16):
	* First release after almost 3 years of testing

Changes and New Features in 1.1 (2021-12-17):
	* Fix documentation bug 