@@ -1,8 +1,8 @@
 Package: nftbart
 Type: Package
 Title: Nonparametric Failure Time Bayesian Additive Regression Trees
-Version: 1.1
-Date: 2021-12-17
+Version: 1.2
+Date: 2022-02-01
 Authors@R: c(person('Rodney', 'Sparapani', 
 	   role=c('aut', 'cre'), email='rsparapa@mcw.edu'),
 	   person('Robert', 'McCulloch', role='aut'),
@@ -20,6 +20,6 @@ Imports: Rcpp
 Suggests: knitr, rmarkdown
 LinkingTo: Rcpp
 NeedsCompilation: yes
-Packaged: 2021-12-17 17:16:31 UTC; rsparapa
+Packaged: 2022-02-03 19:16:02 UTC; rsparapa
 Repository: CRAN
-Date/Publication: 2021-12-20 09:20:05 UTC
+Date/Publication: 2022-02-03 19:40:06 UTC
